--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,6 +1,6 @@
 <div class="loading-overlay">
     <div class="loading-message">
-      Loading<span class="dot-animation"></span><span class="dot-animation"></span><span class="dot-animation"></span>
+      CARGANDO DATOS<span class="dot-animation"></span><span class="dot-animation"></span><span class="dot-animation"></span>
     </div>
   </div>
   
