--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
               <div class="sidebar-brand-icon rotate-n-15">
                   <i class="fas fa-laugh-wink"></i>
               </div>
-              <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+              <div class="sidebar-brand-text mx-3">ATENTO</div>
           </a>
 
           <!-- Divider -->
@@ -21,7 +21,7 @@
           <li class="nav-item active">
               <a class="nav-link" href="index.html">
                   <i class="fas fa-fw fa-tachometer-alt"></i>
-                  <span>Dashboard</span></a>
+                  <span>Panel principal</span></a>
           </li>
 
           <!-- Divider -->
@@ -29,7 +29,7 @@
 
           <!-- Heading -->
           <div class="sidebar-heading">
-              Interface
+              Interfaz
           </div>
 
           <!-- Nav Item - Pages Collapse Menu -->
