--- a/src/app/components/executive/structure/container.component.html
+++ b/src/app/components/executive/structure/container.component.html
@@ -105,13 +105,13 @@
 
         <div class="col-lg-6 mb-4">
 
-            <!-- Illustrations -->
+            
             <div class="card shadow mb-4" id="reportePersona">
                 <app-detail></app-detail>
-            </div>
+            </div> 
 
-            <!-- Approach -->
-            <div class="card shadow mb-4">
+            
+           <!-- <div class="card shadow mb-4">
                 <div class="card-header py-3">
                     <h6 class="m-0 font-weight-bold text-primary">Development Approach</h6>
                 </div>
@@ -122,7 +122,7 @@
                     <p class="mb-0">Before working with this theme, you should become familiar with the
                         Bootstrap framework, especially the utility classes.</p>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </div>
