--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,6 +1,7 @@
+<!-- HTML -->
 <div class="loading-overlay">
-    <div class="loading-message">
-      CARGANDO DATOS<span class="dot-animation"></span><span class="dot-animation"></span><span class="dot-animation"></span>
-    </div>
+  <div class="loading-message">
+    CARGANDO DATOS<br>
+    <span class="dot-animation dot1"></span><span class="dot-animation dot2"></span><span class="dot-animation dot3"></span>
   </div>
-  
+</div>
