--- a/src/app/components/executive/detail/detail.component.html
+++ b/src/app/components/executive/detail/detail.component.html
@@ -3,34 +3,34 @@
 </div>
 <div class="card-body">
     <div class="text-center">
-       <p><b>{{persona.nombre}}</b> - {{persona.registros.length}} registros</p>
+        <p><b>{{persona?.nombre}}</b> - {{persona?.registros?.length}} registros</p>
     </div>
     <div #container class="row">
         <div  class="col-lg-4 p-2 center-container">
             <circle-progress
                 subtitle="Desvios"
-                [percent]= "persona.porDesvios"
-                [innerStrokeColor]=(getColorFromPercentage(persona.porDesvios))
-                [outerStrokeColor]=(getColorForInnerCircle(persona.porDesvios))
-                [radius]="radius"
+                [percent]= "persona?.porDesvios || 0"
+                [innerStrokeColor]=(getColorFromPercentage(persona?.porDesvios))
+                [outerStrokeColor]=(getColorForInnerCircle(persona?.porDesvios))
+                [radius]="radius || 0"
                 ></circle-progress>
         </div>
         <div class="col-lg-4 p-2 center-container">
             <circle-progress
                 subtitle="Faltas"
-                [percent]= "persona.porFaltas"
-                [innerStrokeColor]=(getColorFromPercentage(persona.porFaltas))
-                [outerStrokeColor]=(getColorForInnerCircle(persona.porFaltas))
-                [radius]="radius"
+                [percent]= "persona?.porFaltas || 0"
+                [innerStrokeColor]=(getColorFromPercentage(persona?.porFaltas))
+                [outerStrokeColor]=(getColorForInnerCircle(persona?.porFaltas))
+                [radius]="radius || 0"
             ></circle-progress>
         </div>
         <div class="col-lg-4 p-2 center-container">
             <circle-progress
                 subtitle="TMO's"
-                [percent]= "persona.porTMO"
-                [innerStrokeColor]=(getColorFromPercentage(persona.porTMO))
-                [outerStrokeColor]=(getColorForInnerCircle(persona.porTMO))
-                [radius]="radius"
+                [percent]= "persona?.porTMO || 0"
+                [innerStrokeColor]=(getColorFromPercentage(persona?.porTMO))
+                [outerStrokeColor]=(getColorForInnerCircle(persona?.porTMO))
+                [radius]="radius || 0"
             ></circle-progress>
         </div>
     </div>
@@ -39,28 +39,28 @@
         <div  class="col-lg-4 p-2 center-container">
             <circle-progress
                 subtitle="Descansos"
-                [percent]= "persona.porDescansos"
-                [innerStrokeColor]=(getColorFromPercentage(persona.porDescansos))
-                [outerStrokeColor]=(getColorForInnerCircle(persona.porDescansos))
-                [radius]="radius"
+                [percent]= "persona?.porDescansos || 0"
+                [innerStrokeColor]=(getColorFromPercentage(persona?.porDescansos))
+                [outerStrokeColor]=(getColorForInnerCircle(persona?.porDescansos))
+                [radius]="radius || 0"
                 ></circle-progress>
         </div>
         <div class="col-lg-4 p-2 center-container">
             <circle-progress
                 subtitle="Improductividad"
-                [percent]= "persona.porImproductivos"
-                [innerStrokeColor]=(getColorFromPercentage(persona.porImproductivos))
-                [outerStrokeColor]=(getColorForInnerCircle(persona.porImproductivos))
-                [radius]="radius"
+                [percent]= "persona?.porImproductivos || 0"
+                [innerStrokeColor]=(getColorFromPercentage(persona?.porImproductivos))
+                [outerStrokeColor]=(getColorForInnerCircle(persona?.porImproductivos))
+                [radius]="radius || 0"
             ></circle-progress>
         </div>
         <div class="col-lg-4 p-2 center-container">
             <circle-progress
                 subtitle="Tardanzas"
-                [percent]= "persona.porTardanza"
-                [innerStrokeColor]=(getColorFromPercentage(persona.porTardanza))
-                [outerStrokeColor]=(getColorForInnerCircle(persona.porTardanza))
-                [radius]="radius"
+                [percent]= "persona?.porTardanza || 0"
+                [innerStrokeColor]=(getColorFromPercentage(persona?.porTardanza))
+                [outerStrokeColor]=(getColorForInnerCircle(persona?.porTardanza))
+                [radius]="radius || 0"
             ></circle-progress>
         </div>
     </div>
@@ -74,7 +74,7 @@
           </div>
           <hr>
           <div *ngIf="showContent">
-            <p *ngFor="let registro of persona.registros">
+            <p *ngFor="let registro of persona?.registros || []">
               <b>{{registro.Fecha | transformExcelDate | customDate}}</b> - {{registro.SITE}}
               <br>
               <small>Tard: {{registro.TARDANZAS}} - </small>
