--- a/src/app/components/loading/loading.component.css
+++ b/src/app/components/loading/loading.component.css
@@ -1,45 +1,53 @@
+/* CSS */
 .loading-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.75); /* Semi-transparent black background */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999; /* Set a high z-index to ensure the loading overlay appears above other content */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75); /* Semi-transparent black background */
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  z-index: 9999;
+}
+
+.loading-message {
+  text-align: center;
+  color: white;
+}
+
+.dot-animation {
+  display: inline-block;
+  margin: 0 4px; /* Adjust the spacing between dots */
+  width: 8px;
+  height: 8px;
+  background-color: white;
+  border-radius: 50%;
+  animation-name: dot-animation;
+  animation-iteration-count: infinite; /* Apply animation */
+}
+
+.dot1 {
+  animation-delay: 300ms;
+  animation-duration: 1.5s;
+}
+
+.dot2 {
+  animation-delay: 500ms; /* Delay the start of animation for the second dot */
+  animation-duration: 1.5s;
+}
+
+.dot3 {
+  animation-delay: 700ms; /* Delay the start of animation for the third dot */
+  animation-duration: 1.5s;
+}
+@keyframes dot-animation {
+  0%, 100% {
+    opacity: 0; /* Start and end with no visibility */
   }
-  
-  .loading-message {
-    color: white;
-    font-size: 24px;
+  50% {
+    opacity: 1; /* At 50%, fully visible */
   }
-  
-  .dot-animation {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: white;
-    animation: dot-pulse 1.5s infinite;
-    margin-left: 5px; /* Adjust spacing between dots */
-  }
-  
-  .dot-animation:nth-child(2) {
-    animation-delay: 0.5s;
-  }
-  
-  .dot-animation:nth-child(3) {
-    animation-delay: 1s;
-  }
-  
-  @keyframes dot-pulse {
-    0%, 80%, 100% {
-      transform: scale(1);
-    }
-    40% {
-      transform: scale(1.5);
-    }
-  }
-  
+}
+
