--- a/src/app/components/executive/list/list.component.html
+++ b/src/app/components/executive/list/list.component.html
@@ -5,12 +5,12 @@
         </div>
         <input type="text" class="form-control" placeholder="Buscar..." (input)="filterEmployees($event)">
     </div>
-    <table class="outer-table table table-bordered table-hover">
+    <table class="outer-table table table-bordered">
         <tbody>
             <ng-container *ngFor="let element of filteredReportePersonas">
                 <!-- Group by name -->
                 <tr (click)="toggleInnerTable(element)">
-                    <td colspan="7" class="small-text">
+                    <td colspan="7" class="small-text clickable">
                         <strong >{{ element.nombre }}</strong> - DNI: {{element.dni}}
                     </td>
                 </tr>
@@ -28,19 +28,19 @@
                     <tr *ngFor="let registro of element.registros">
                         <td class="small-text">{{ registro.Fecha | transformExcelDate | customDate }}</td>
                         <td class="small-text">{{ registro.SITE }}</td>
-                        <td class="small-text" [ngClass]="{'text-red': registro.TARDANZAS !== 'OK'}"
+                        <td class="small-text clickable" [ngClass]="{'text-red': registro.TARDANZAS !== 'OK'}"
                             (click)="openSpecificReport(registro, element, 'TARDANZAS')">
                             {{ registro.TARDANZAS }}</td>
-                        <td class="small-text" [ngClass]="{'text-red': registro.TMO !== 'OK'}"
+                        <td class="small-text clickable" [ngClass]="{'text-red': registro.TMO !== 'OK'}"
                             (click)="openSpecificReport(registro, element, 'TMO')">
                             {{ registro.TMO }}</td>
-                        <td class="small-text" [ngClass]="{'text-red': registro.BREAK !== 'OK'}"
+                        <td class="small-text clickable" [ngClass]="{'text-red': registro.BREAK !== 'OK'}"
                             (click)="openSpecificReport(registro, element, 'TARDANZAS')">
                             {{ registro.BREAK}}</td>
-                        <td class="small-text" [ngClass]="{'text-red': registro.PRODUCTIVIDAD !== 'OK'}"
+                        <td class="small-text clickable" [ngClass]="{'text-red': registro.PRODUCTIVIDAD !== 'OK'}"
                             (click)="openSpecificReport(registro, element, 'PRODUCTIVIDAD')">
                             {{ registro.PRODUCTIVIDAD }}</td>
-                        <td class="small-text" [ngClass]="{'text-red': registro.FALTA !== 'OK'}"
+                        <td class="small-text clickable" [ngClass]="{'text-red': registro.FALTA !== 'OK'}"
                             (click)="openSpecificReport(registro, element, 'TARDANZAS')">
                             {{ registro.FALTA }}</td>
                     </tr>
