--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,54 +1,59 @@
-      <!-- Sidebar -->
-      <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+<!-- Sidebar -->
+<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-        <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" routerLink="/general">
-            <div class="sidebar-brand-icon rotate-n-15">
-                <i class="fas fa-laugh-wink"></i>
-            </div>
-            <div class="sidebar-brand-text mx-3">ATENTO</div>
+    <!-- Sidebar - Brand -->
+    <!-- Sidebar - Brand -->
+<a class="sidebar-brand d-flex flex-column align-items-center justify-content-center" routerLink="/general" style="height: 100px;">
+    <div class="sidebar-brand-icon" style="width: 100%;">
+        <img src="../../../assets/img/TS.svg" alt="TS Logo" style="width: 40%;" class="svg-image">
+    </div>
+    <div style="margin-top: -15px;">TRANSCRIPCIONES</div>
+</a>
+
+
+
+    <!-- Divider -->
+    <hr class="sidebar-divider my-0">
+
+    <!-- Nav Item - Pages Collapse Menu -->
+    <li class="nav-item" routerLinkActive="active" data-toggle="collapse" data-target="#collapseTwo"
+        aria-expanded="true" aria-controls="collapseTwo">
+        <a class="nav-link" routerLink="/general" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
+            aria-controls="collapseTwo">
+            <i class="fas fa-fw fa-tachometer-alt"></i>
+            <span>RESUMEN</span>
         </a>
-
-        <!-- Divider -->
-        <hr class="sidebar-divider my-0">
-
-        <!-- Heading -->
-        <div class="sidebar-heading">
-            REPORTES
-        </div>
-
-        <!-- Nav Item - Pages Collapse Menu -->
-        <li class="nav-item" routerLinkActive="active"  data-toggle="collapse" data-target="#collapseTwo"
-                aria-expanded="true" aria-controls="collapseTwo">>
-            <a class="nav-link" routerLink="/general" data-toggle="collapse" data-target="#collapseTwo"
+    </li>
+    <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link collapsed" routerLink="/improductivos" data-toggle="collapse" data-target="#collapseTwo"
             aria-expanded="true" aria-controls="collapseTwo">
-                <i class="fas fa-fw fa-tachometer-alt"></i>
-                <span>RESUMEN</span>
-            </a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link collapsed" routerLink="/improductivos" data-toggle="collapse" data-target="#collapseTwo"
-                aria-expanded="true" aria-controls="collapseTwo">
-                <i class="fas fa-fw fa-cog"></i>
-                <span>IMPRODUCTIVOS</span>
-            </a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link collapsed" routerLink="/tardanzas" data-toggle="collapse" data-target="#collapseUtilities"
-                aria-expanded="true" aria-controls="collapseUtilities">
-                <i class="fas fa-fw fa-wrench"></i>
-                <span>TARDANZAS</span>
-            </a>
-        </li>
+            <i class="fas fa-fw fa-cog"></i>
+            <span>IMPRODUCTIVOS</span>
+        </a>
+    </li>
+    <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link collapsed" routerLink="/tardanzas" data-toggle="collapse" data-target="#collapseUtilities"
+            aria-expanded="true" aria-controls="collapseUtilities">
+            <i class="fas fa-fw fa-wrench"></i>
+            <span>TARDANZAS</span>
+        </a>
+    </li>
+    <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link collapsed" routerLink="/basePatagonia" data-toggle="collapse" data-target="#collapseUtilities"
+            aria-expanded="true" aria-controls="collapseUtilities">
+            <i class="fas fa-fw fa-wrench"></i>
+            <span>BASE PATAGONIA</span>
+        </a>
+    </li>
 
-        <!-- Divider -->
-        <hr class="sidebar-divider d-none d-md-block">
+    <!-- Divider -->
+    <hr class="sidebar-divider d-none d-md-block">
 
-        <!-- Sidebar Toggler (Sidebar) -->
-        <div class="text-center d-none d-md-inline">
-            <button class="rounded-circle border-0" id="sidebarToggle"></button>
-        </div>
+    <!-- Sidebar Toggler (Sidebar) -->
+    <div class="text-center d-none d-md-inline">
+        <button class="rounded-circle border-0" id="sidebarToggle"></button>
+    </div>
 
-        <!-- Sidebar Message -->
-    </ul>
-    <!-- End of Sidebar -->
+    <!-- Sidebar Message -->
+</ul>
+<!-- End of Sidebar -->
